Section sorting for backend
